@@ -1,5 +1,5 @@
 /*
- *  Copyright (C) 2010-2018 JPEXS
+ *  Copyright (C) 2010-2021 JPEXS
  * 
  *  This program is free software: you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -33,9 +33,11 @@ import java.awt.Graphics;
 import java.awt.Graphics2D;
 import java.awt.Insets;
 import java.awt.RenderingHints;
+import java.awt.Window;
 import java.awt.event.ActionEvent;
 import java.io.File;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.ParameterizedType;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
@@ -62,7 +64,6 @@ import javax.swing.JLabel;
 import javax.swing.JList;
 import javax.swing.JOptionPane;
 import javax.swing.JPanel;
-import javax.swing.JScrollPane;
 import javax.swing.JTabbedPane;
 import javax.swing.JTextField;
 import javax.swing.SpringLayout;
@@ -91,12 +92,8 @@ public class AdvancedSettingsDialog extends AppDialog {
 
     private JButton resetButton;
 
-    /**
-     * Creates new form AdvancedSettingsDialog
-     *
-     * @param selectedCategory
-     */
-    public AdvancedSettingsDialog(String selectedCategory) {
+    public AdvancedSettingsDialog(Window owner, String selectedCategory) {
+        super(owner);
         initComponents(selectedCategory);
         View.centerScreen(this);
         View.setWindowIcon(this);
@@ -176,7 +173,7 @@ public class AdvancedSettingsDialog extends AppDialog {
 
         Container cnt = getContentPane();
         cnt.setLayout(new BorderLayout());
-        //cnt.add(new JScrollPane(configurationTable),BorderLayout.CENTER);
+        //cnt.add(new FasterScrollPane(configurationTable),BorderLayout.CENTER);
 
         JPanel buttonsPanel = new JPanel(new BorderLayout());
 
@@ -209,7 +206,7 @@ public class AdvancedSettingsDialog extends AppDialog {
                         g2.setRenderingHint(RenderingHints.KEY_ANTIALIASING, RenderingHints.VALUE_ANTIALIAS_ON);
                         try {
                             Class<?> act = Class.forName(ss.getClassName());
-                            SubstanceSkin skin = (SubstanceSkin) act.newInstance();
+                            SubstanceSkin skin = (SubstanceSkin) act.getDeclaredConstructor().newInstance();
                             Color fill = skin.getColorScheme(DecorationAreaType.GENERAL, ColorSchemeAssociationKind.FILL, ComponentState.ENABLED).getBackgroundFillColor();
                             Color hilight = skin.getColorScheme(DecorationAreaType.GENERAL, ColorSchemeAssociationKind.FILL, ComponentState.ROLLOVER_SELECTED).getBackgroundFillColor();
                             Color border = skin.getColorScheme(DecorationAreaType.GENERAL, ColorSchemeAssociationKind.BORDER, ComponentState.ENABLED).getDarkColor();
@@ -220,7 +217,7 @@ public class AdvancedSettingsDialog extends AppDialog {
                             g2.setColor(border);
                             g2.drawOval(0, 0, 16, 16);
 
-                        } catch (ClassNotFoundException | InstantiationException | IllegalAccessException ex) {
+                        } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException ex) {
                             //no icon
                         }
 
@@ -294,9 +291,7 @@ public class AdvancedSettingsDialog extends AppDialog {
         fc.setFileFilter(allSupportedFilter);
 
         fc.setAcceptAllFileFilterUsed(false);
-        JFrame f = new JFrame();
-        View.setWindowIcon(f);
-        int returnVal = fc.showOpenDialog(f);
+        int returnVal = fc.showOpenDialog(Main.getDefaultMessagesComponent());
         if (returnVal == JFileChooser.APPROVE_OPTION) {
             return Helper.fixDialogFile(fc.getSelectedFile()).getAbsolutePath();
         } else {
@@ -491,12 +486,12 @@ public class AdvancedSettingsDialog extends AppDialog {
                 p.add(tipPanel, BorderLayout.SOUTH);
                 configPanel = p;
             }
-            tabs.put(cat, new JScrollPane(configPanel));
+            tabs.put(cat, new FasterScrollPane(configPanel));
         }
     }
 
     private void showRestartConfirmDialog() {
-        if (View.showConfirmDialog(this, translate("advancedSettings.restartConfirmation"), AppStrings.translate("message.warning"), JOptionPane.YES_NO_OPTION) == JOptionPane.YES_OPTION) {
+        if (ViewMessages.showConfirmDialog(this, translate("advancedSettings.restartConfirmation"), AppStrings.translate("message.warning"), JOptionPane.YES_NO_OPTION) == JOptionPane.YES_OPTION) {
             try {
                 // todo: honfika: why?
                 Thread.sleep(1000);
